hphp/hack/test/typecheck/parse_xhp_format_infinite_loop2.php.exp
File "parse_xhp_format_infinite_loop2.php", line 4, characters 16-16:
A name is expected here. (Parsing[1002])
