hphp/hack/test/typecheck/parse_xhp_format_infinite_loop2.php
<?hh // partial

class :foo extends :xhp {
      attribute
